--- a/packages/resource-deployment/package.json
+++ b/packages/resource-deployment/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
-        "build": "cpx \"./templates/**\" \"./dist/templates\" && cpx \"./scripts/**\" \"./dist/scripts\" && cpx \"./runtime-config/**\" \"./dist/runtime-config\" && echo",
+        "build": "cpy \"./templates/**\" \"./dist/templates\" && cpy \"./scripts/**\" \"./dist/scripts\" && cpy \"./runtime-config/**\" \"./dist/runtime-config\" && echo",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist test-results"
     },
@@ -14,7 +14,7 @@
     },
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
-        "cpx": "^1.5.0",
+        "cpy-cli": "^3.1.0",
         "rimraf": "^3.0.2"
     },
     "dependencies": {}
