--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
         "https-proxy-agent": "^3.0.1",
         "serialize-javascript": "^2.1.1",
         "minimist": "^1.2.2",
-        "dot-prop": "^5.2.0"
+        "dot-prop": "^5.2.0",
+        "yargs": "^15.3.1",
+        "yargs-parser": "^18.1.3",
+        "kind-of": "^6.0.3"
     }
 }
