--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
         ]
     },
     "resolutions": {
-        "jquery": "^3.4.1",
+        "jquery": "^3.5.1",
         "https-proxy-agent": "^3.0.1",
         "serialize-javascript": "^2.1.1",
         "minimist": "^1.2.2",
         "dot-prop": "^5.2.0",
-        "kind-of": "^6.0.3"
+        "kind-of": "^6.0.3",
+        "watchpack": "^1.7.2",
+        "yargs-parser": "^18.1.3"
     }
 }
