--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "socket.io": ">=2.4.0",
         "socket.io-parser": ">=3.4.1",
         "marked": ">=1.1.1",
-        "engine.io": ">=4.0.0"
+        "engine.io": ">=4.0.0",
+        "ssri": ">=8.0.1"
     }
 }
