--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
         "socket.io-parser": ">=3.4.1",
         "marked": ">=1.1.1",
         "engine.io": ">=4.0.0",
-        "ssri": ">=8.0.1"
+        "ssri": ">=8.0.1",
+        "normalize-url": ">=6.0.1",
+        "glob-parent": ">=5.1.2"
     }
 }
