--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "bootstrap": "npx lerna bootstrap",
         "clean": "npx lerna run clean --stream && rimraf dist test-results",
-        "cbuild": "npx syncpack fix-mismatches format --indent '    ' && yarn install && npx lerna run cbuild --stream",
+        "cbuild": "npx syncpack fix-mismatches format --indent '    ' && yarn install && npx lerna run build --stream",
         "build": "npx lerna run build --stream",
         "pack": "npx lerna run pack --stream",
         "test": "npx jest",
@@ -22,7 +22,8 @@
         "format:fix": "npx prettier --write \"**/*\"",
         "format:check": "npx prettier --check \"**/*\"",
         "copyright:check": "license-check-and-add check -f ./license-check-and-add-config.json",
-        "copyright:fix": "license-check-and-add add -f ./license-check-and-add-config.json"
+        "copyright:fix": "license-check-and-add add -f ./license-check-and-add-config.json",
+        "audit:fix": "npx yarn-audit-fix"
     },
     "author": "Microsoft",
     "license": "MIT",
@@ -55,7 +56,8 @@
         "simple-git": "^2.38.0",
         "syncpack": "^5.7.11",
         "tslint": "^6.1.3",
-        "typescript": "^4.3.2"
+        "typescript": "^4.3.2",
+        "yarn-audit-fix": "^6.3.1"
     },
     "workspaces": {
         "packages": [
@@ -64,14 +66,10 @@
     },
     "resolutions": {
         "axe-core": "4.2.1",
-        "apify-shared": ">=0.5.0",
         "axios": ">=0.21.1",
-        "socket.io": ">=2.4.0",
-        "socket.io-parser": ">=3.4.1",
-        "marked": ">=1.1.1",
-        "engine.io": ">=4.0.0",
-        "ssri": ">=8.0.1",
+        "marked": ">=2.0.0",
         "normalize-url": ">=6.0.1",
-        "glob-parent": ">=5.1.2"
+        "glob-parent": ">=5.1.2",
+        "css-what": ">=5.0.1"
     }
 }
