--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
         "test:e2e": "npx jest functional-tests.local.spec.ts",
         "lint:check": "npx lerna run lint --stream",
         "lint:fix": "npx lerna run lint:fix --stream",
-        "precheckin": "npm-run-all --serial format:check lint:check copyright:check build test",
+        "precheckin": "npm-run-all --serial format:check lint:check copyright:check cbuild test",
         "format:fix": "npx prettier --write \"**/*\"",
         "format:check": "npx prettier --check \"**/*\"",
         "copyright:check": "license-check-and-add check -f ./license-check-and-add-config.json",
-        "copyright:fix": "license-check-and-add add -f ./license-check-and-add-config.json"
+        "copyright:fix": "license-check-and-add add -f ./license-check-and-add-config.json",
+        "audit": "lerna-audit"
     },
     "author": "Microsoft",
     "license": "MIT",
@@ -55,7 +56,8 @@
         "simple-git": "^2.38.0",
         "syncpack": "^5.7.11",
         "tslint": "^6.1.3",
-        "typescript": "^4.3.2"
+        "typescript": "^4.3.2",
+        "lerna-audit": "^1.3.2"
     },
     "workspaces": {
         "packages": [
@@ -66,12 +68,11 @@
         "axe-core": "4.2.1",
         "apify-shared": ">=0.5.0",
         "axios": ">=0.21.1",
-        "socket.io": ">=2.4.0",
-        "socket.io-parser": ">=3.4.1",
-        "marked": ">=1.1.1",
-        "engine.io": ">=4.0.0",
-        "ssri": ">=8.0.1",
+        "marked": ">=2.0.0",
         "normalize-url": ">=6.0.1",
-        "glob-parent": ">=5.1.2"
+        "glob-parent": ">=5.1.2",
+        "css-what": ">=5.0.1",
+        "socket.io": ">=2.4.0",
+        "socket.io-parser": ">=3.4.1"
     }
 }
